# scicode-widgets

./: .codecov.yml  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  environment.yml  environments.yml  paper.md  pyproject.toml  requirements-test.txt  tox.ini
.github/workflows/: build-docs.yml  deploy-jupyterlite.yml  documentation-links.yml  lint.yml  publish-pypi.yml  tests-lab-3.yml  tests-lab-4.yml  tests-notebook-7.yml  tests.yml
docs/: requirements.txt
docs/src/: api.rst  check.ipynb  conf.py  developers.rst  exercises.ipynb  getting_started.ipynb  index.rst  nbgrader.ipynb  problem1-reference_solution.json
docs/src/developers/: devtools.rst  index.rst
examples/: Aromatics_MCQ.ipynb  README.md  demo-refactor.ipynb  notebook1.ipynb  notebook2.ipynb  refactor.ipynb  requirements-jupyterlite.txt  requirements-notebooks.txt  requirements.txt
paper/: paper.bib  paper.md
repl/: jupyter-lite.json
src/css/: scwidget_style.css
src/scwidgets/: __init__.py  _base.py  _check_registry.py  _code_demo.py  _css_style.py  _save_registry.py  _utils.py  _widget_cue_box.py  _widget_cue_button.py  scwidget_style.css
src/scwidgets/answer/: __init__.py  _widget_answer_registry.py
src/scwidgets/check/: __init__.py  _asserts.py  _check.py  _widget_check_registry.py
src/scwidgets/code/: __init__.py  _widget_code_demo.py  _widget_code_input.py  _widget_parameter_panel.py  _widget_parameters_panel.py
src/scwidgets/css/: widgets.css
src/scwidgets/cue/: __init__.py  _widget_cue.py  _widget_cue_box.py  _widget_cue_figure.py  _widget_cue_object.py  _widget_cue_output.py  _widget_reset_cue_button.py
src/scwidgets/exercise/: __init__.py  _widget_code_exercise.py  _widget_exercise_registry.py  _widget_multiplechoice_exercise.py  _widget_text_exercise.py  _widget_textarea.py
tests/: __init__.py  conftest.py  test_answer.py  test_check.py  test_code.py  test_widget_cuebox.ipynb  test_widgets.py
tests/notebooks/: README.rst  widget_answers.py  widget_check_registry.py  widget_code_demo.py  widget_code_exercise.py  widget_cue_box.py  widget_cue_figure-inline.py  widget_cue_figure-ipympl.py  widget_scwidgets_code_input.py  widgets.py  widgets_cue.py
