[build-system]
# setuptools requirement due to specifiying the version the in pyproject.toml
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "scwidgets"
description = "ipywidgets for the creation of interactive code demos and educational notebooks"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "ipywidgets>=8.0.0",
  "numpy<2.0.0",
  "widget_code_input>=4.0.13",
  "matplotlib",
  "termcolor"
]
dynamic = ["version"]


[project.optional-dependencies]

tests = [
    "pytest<8.0.0",
    "pytest-rerunfailures",
    "pytest-html<4.0.0",
    # selenium juypter notebook tests
    "jupyterlab==3.6.5",
    # fixing selenium version to have backwards-compatibility with pytest-selenium
    # see https://github.com/robotframework/SeleniumLibrary/issues/1835#issuecomment-1581426365
    "selenium==4.9.0",
    "pytest-selenium",
    "jupytext==1.15.0",
    "imageio",
    # we fix matplotlib for consistent image tests
    "matplotlib==3.7.2",
    "numpy<2.0.0",
    "scikit-image",
    "ipympl",
]

[tool.setuptools.dynamic]
version = {attr = "scwidgets.__version__"}
readme = {file = ["README.rst"]}

[tool.setuptools.package-data]
scwidgets = ["css/widgets.css"]

[tool.isort]
profile = "black"
